<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Grid Image Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="filer_label_size">Size</string>
    <string name="label_color_filter">Color filter</string>
    <string name="filter_label_type">Type</string>
    <string name="filter_label_site">Site</string>
    <string name="btn_label_save">Save</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="btn_label_cancel">Cancel</string>
    <string-array name="img_size_options">
        <item>any</item>
        <item>icon</item>
        <item>medium</item>
        <item>large</item>
        <item>extra-large</item>
    </string-array>
    <string-array name="img_color_filter">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string-array name="img_type_options">
        <item>any</item>
        <item>faces</item>
        <item>photo</item>
        <item>clip art</item>
        <item>line art</item>
    </string-array>
</resources>